# ncd_examples

./: .gitignore  README.md  makefile
contracts/cchl/: Cargo.toml
contracts/cchl/src/: lib.rs
contracts/cchl/tests/: execution_result.txt  test_cchl.rs
contracts/mock-dex/: Cargo.toml  build.sh
contracts/mock-dex/src/: lib.rs
contracts/sim-token/: Cargo.toml  build.sh
contracts/sim-token/src/: lib.rs  operator.rs  owner.rs  view.rs
contracts/sim-token/tests/: ft_actions.rs  mint_burn.rs  operator.rs  owner.rs
contracts/sim-token/tests/common/: mod.rs
contracts/storage-demo/: Cargo.toml
contracts/storage-demo/src/: lib.rs  note.rs
contracts/test-token/: Cargo.toml  build.sh
contracts/test-token/src/: events.rs  lib.rs
tools/: .gitignore  requirements.txt
tools/check_validators/: main.py  rpc_provider.py
tools/check_validators/data/: readme.md
tools/storage_analyser/: main.py  near_rpc.py
tools/storage_analyser/data/: eg_whole.json  readme.txt
tools/wasm_verification/: rpc_provider.py  verify.py
