[package]
name = "sim_token"
version = "1.0.0"
authors = ["Marco Sun <sun.dsk1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.7"
near-sys = "0.1.0"
near-contract-standards = "4.0.0-pre.7"

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.7"
mock_dex = { path = "../mock-dex" }